syntax = "proto3";

import "google/protobuf/timestamp.proto";

package Greet;

// The greeting service definition.
service ProbaServer {
  rpc GetProbas (ProbaRequest) returns (stream ProbaReply) {}
  rpc AddProba (ProbaMessage) returns (ProbaActionReply) {}
  rpc EditProba (ProbaMessage) returns (ProbaActionReply) {}
  rpc DeleteProba (ProbaMessage) returns (ProbaActionReply) {}
}

// The request message containing the user's name.
message ProbaRequest {
  string name = 1;
}

message ProbaActionReply {
	string message = 1;
	bool success = 2;
}

message ProbaReply {
  repeated ProbaMessage messages = 1;
}

// The response message containing the greetings.
message ProbaMessage {
  string greeting = 1;
  int32 count = 2;
  google.protobuf.Timestamp date = 3;
  double value = 4;
}
